@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2011-1-19
+GNU C Library NEWS -- history of user-visible changes.  2011-5-30
 Copyright (C) 1992-2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -13,7 +13,7 @@ Version 2.13
   11655, 11701, 11840, 11856, 11883, 11903, 11904, 11968, 11979, 12005,
   12037, 12067, 12077, 12078, 12092, 12093, 12107, 12108, 12113, 12140,
   12159, 12167, 12191, 12194, 12201, 12204, 12205, 12207, 12348, 12378,
-  12394, 12397, 12489, 12653
+  12394, 12397, 12489, 12653, 12454
 
 * New Linux interfaces: prlimit, prlimit64, fanotify_init, fanotify_mark
 
